--- a/my_fav_site.html
+++ b/my_fav_site.html
@@ -26,6 +26,19 @@
         </map>
         
         <hr size="5" color="#3d2fce" width="90%">
+        <p>
+            <h3>My Favourite site to visit when i want to buy clothes and hijab</h3>
+            <br>
+            <h3> <font color="#3d2fce"></font>clothes</h3>
+            i like to visit panda eyes shop on tiktok buy clothes, pants and traditional cloth.
+            Panda eyes offer very affordable price during live on tiktok.Plus the material and the quality
+            are top tier and the size are free size which is suitable for me.
+            <br>
+            <h3> <font color="#3d2fce"></font> Hijab</h3>
+            i like to shop ck rahim store to buy my hijab because it is cheap and have many color to choose
+            and what kind of hijab we want.During eidulfitri my family will make sure the family all buy hijab at ckrahim.
+           
+        </p>
 
         </html>
     </body>
