--- a/homepage.html
+++ b/homepage.html
@@ -89,7 +89,7 @@
     <a href="my_family.html" class="button">My Family</a>
     <a href="my_education.html" class="button">My Education</a>
     <a href="my_fav_site.html" class="button">Favourite Site</a>
-    <a href="my_top3_fav.html" class="button">Favourite Entertainment</a>
+    <a href="my_topfav.html" class="button">Favourite Entertainment</a>
     <a href="gallery.html" class="button">Gallery</a>
     <a href="my_contact.html" class="button">My Contact</a>
   </div>
