--- a/my_topfav.html
+++ b/my_topfav.html
@@ -11,7 +11,7 @@
             margin: 20px;
             line-height: 1.6;
             background-image: url(image/back\ paper.jpg);
-            background-size: 20'inc;
+            background-size: 20;
             background-repeat: no-repeat;
         }
         h1, h2 {
