--- a/biodata.html
+++ b/biodata.html
@@ -5,7 +5,14 @@
     <body bgcolor="#cbc80b">
 
         <h1>BIODATA</h1>
-        
+        <style>
+            body
+    {
+        background-image: url(image/back\ paper.jpg);
+        background-size: 20' inc;
+        background-repeat: no-repeat;
+     }
+        </style>
 
         Welcome To Athirah's Website
            <br><b>𓆩♡𓆪ATHIRAH DANIA BINTI ANUAR𓆩♡𓆪</b>
