--- a/my_contact.html
+++ b/my_contact.html
@@ -7,7 +7,7 @@
     body
     {
         background-image: url(image/back\ paper.jpg);
-        background-size: 20' inc;
+        background-size: cover;
         background-repeat: no-repeat;
      }
     </style>
