--- a/my_fav_site.html
+++ b/my_fav_site.html
@@ -10,7 +10,9 @@
             background-size: 20'inc;
             background-repeat: no-repeat;
          }
-
+        h1{
+            text-align: center;
+        }
         </style>
 
         <h1>Favourite store</h1>
@@ -39,6 +41,14 @@
             and what kind of hijab we want.During eidulfitri my family will make sure the family all buy hijab at ckrahim.
            
         </p>
+        <hr color="black">
+        <h4 align="center"> Doing fit check buying form panda eyes store</h4>
+
+        <video controls height="500">
+            <source src="video/fit check.mp4" type="video/mp4">
+            <source src="video/fit check.mp4" type="video/mp4">
+            your browser does not support the video element
+        </video>
 
         </html>
     </body>
