--- a/my_topfav.html
+++ b/my_topfav.html
@@ -6,14 +6,14 @@
         body {
         font-family: Arial, sans-serif;
         background-color: #f4f4f4;
-        margin: 0; /* Ensure the background covers the entire viewport */
-        padding: 0; /* Remove any default padding */
+        margin: 0; 
+        padding: 0; 
         line-height: 1.6;
         background-image: url("image/back paper.jpg");
         background-size: cover; /* Ensures the image covers the entire background */
         background-repeat: no-repeat;
-        background-attachment: fixed; /* Makes the background stay fixed during scroll */
-        background-position: center; /* Ensures the image is centered */
+        background-attachment: fixed; /
+        background-position: center; 
         }
         h1, h2 {
             text-align: center;
@@ -69,13 +69,13 @@
     </style>
 </head>
 <body>
-    <h1> <font color="black"></font>My Favourite Entertainment</h1>
+    <h1> <font color="black"></font>🎥My Favourite Entertainment🎵</h1>
 
     <!-- Table 1: Favorite Music -->
 <!-- Table 1: Favorite Music -->
-<h2>Favorite Music</h2>
+<h2>Favourite Music</h2>
 <table border="1">
-    <caption>Table 1: Favorite Music</caption>
+    <caption>Table 1: Favourite Music</caption>
     <thead>
         <tr>
             <th>Genre</th>
@@ -91,6 +91,11 @@
             <td>
                 <img src="image/bts.jpg" alt="BTS" width="120"><br>
                 <a href="https://open.spotify.com/artist/3Nrfpe0tUJi4K4DXYWgMUX" target="_blank">Listen on Spotify</a>
+                <audio controls>
+                    <source src="audio/SpotifyMate.com - Spring Day - BTS.mp3" type="audio/ogg">
+                    <source src="audio/SpotifyMate.com - Spring Day - BTS.mp3" type="audio/mpeg">
+                    Your browser does not support audio element
+                </audio>
             </td>
         </tr>
         <tr>
@@ -98,6 +103,11 @@
             <td>
                 <img src="image/blackpink.jpg" alt="BLACKPINK" width="120"><br>
                 <a href="https://open.spotify.com/artist/41MozSoPIsD1dJM0CLPjZF" target="_blank">Listen on Spotify</a>
+                <audio controls>
+                    <source src="audio/SpotifyMate.com - DDU-DU DDU-DU - BLACKPINK.mp3" type="audio/ogg">
+                    <source src="audio/SpotifyMate.com - DDU-DU DDU-DU - BLACKPINK.mp3" type="audio/mpeg">
+                    Your browser does not support audio element
+                </audio>
             </td>
         </tr>
         <tr>
@@ -105,6 +115,11 @@
             <td>
                 <img src="image/babymon.jpg" alt="BABYMONSTER" width="120"><br>
                 <a href="https://open.spotify.com/artist/1SIocsqdEefUTE6XKGUiVS" target="_blank">Listen on Spotify</a>
+                <audio controls>
+                    <source src="audio/SpotifyMate.com - DRIP - BABYMONSTER.mp3" type="audio/ogg">
+                    <source src="audio/SpotifyMate.com - DRIP - BABYMONSTER.mp3" type="audio/mpeg">
+                    Your browser does not support audio element
+                </audio>
             </td>
         </tr>
 
@@ -115,6 +130,11 @@
             <td>
                 <img src="image/taylor.jpg" alt="Taylor Swift" width="120"><br>
                 <a href="https://open.spotify.com/artist/06HL4z0CvFAxyc27GXpf02" target="_blank">Listen on Spotify</a>
+                <audio controls>
+                    <source src="audio/SpotifyMate.com - Daylight - Taylor Swift.mp3" type="audio/ogg">
+                    <source src="audio/SpotifyMate.com - Daylight - Taylor Swift.mp3" type="audio/mpeg">
+                    Your browser does not support audio element
+                </audio>
             </td>
         </tr>
         <tr>
@@ -122,6 +142,11 @@
             <td>
                 <img src="image/jeff.jpg" alt="Jeff Satur" width="120"><br>
                 <a href="https://open.spotify.com/artist/5xq3BK55BJmutN0X7eTyQB" target="_blank">Listen on Spotify</a>
+                <audio controls>
+                    <source src="audio/SpotifyMate.com - เหมือนวิวาห์ (Rain wedding) [From _วิมานหนาม_] - Jeff Satur.mp3" type="audio/ogg">
+                    <source src="audio/SpotifyMate.com - เหมือนวิวาห์ (Rain wedding) [From _วิมานหนาม_] - Jeff Satur.mp3" type="audio/mpeg">
+                    Your browser does not support audio element
+                </audio>
             </td>
         </tr>
         <tr>
@@ -129,6 +154,11 @@
             <td>
                 <img src="image/kehsi2.jpg" alt="Keshi" width="120"><br>
                 <a href="https://open.spotify.com/artist/3pc0bOVB5whxmD50W79wwO" target="_blank">Listen on Spotify</a>
+                <audio controls>
+                    <source src="audio/SpotifyMate.com - beside you - keshi.mp3" type="audio/ogg">
+                    <source src="audio/SpotifyMate.com - beside you - keshi.mp3" type="audio/mpeg">
+                    Your browser does not support audio element
+                </audio>
             </td>
         </tr>
 
@@ -139,13 +169,23 @@
             <td>
                 <img src="image/sabrina.jpg" alt="Sabrina Carpenter" width="120"><br>
                 <a href="https://open.spotify.com/artist/74KM79TiuVKeVCqs8QtB0B" target="_blank">Listen on Spotify</a>
+                <audio controls>
+                    <source src="audio/SpotifyMate.com - Please Please Please - Sabrina Carpenter.mp3" type="audio/ogg">
+                    <source src="audio/SpotifyMate.com - Please Please Please - Sabrina Carpenter.mp3" type="audio/mpeg">
+                    Your browser does not support audio element
+                </audio>
             </td>
         </tr>
         <tr>
             <td>Ariana Grande</td>
             <td>
-                <img src="image/grande.jpg" alt="Ariana Grande" width="120"><br>
+                <img src="image/GRANDE.jpg" alt="Ariana Grande" width="120"><br>
                 <a href="https://open.spotify.com/artist/66CXWjxzNUsdJxJ2JdwvnR" target="_blank">Listen on Spotify</a>
+                <audio controls>
+                    <source src="audio/SpotifyMate.com - we can't be friends (wait for your love) - Ariana Grande.mp3" type="audio/ogg">
+                    <source src="audio/SpotifyMate.com - we can't be friends (wait for your love) - Ariana Grande.mp3" type="audio/mpeg">
+                    Your browser does not support audio element
+                </audio>
             </td>
         </tr>
         <tr>
@@ -153,6 +193,11 @@
             <td>
                 <img src="image/fotfot.jpg" alt="Fourth Nattawat" width="120"><br>
                 <a href="https://open.spotify.com/artist/4PtJISxBNvXOwLxuQgUiyQ" target="_blank">Listen on Spotify</a>
+                <audio controls>
+                    <source src="audio/SpotifyMate.com - ง้อ (ALRIGHT) - FOURTH.mp3" type="audio/ogg">
+                    <source src="audio/SpotifyMate.com - ง้อ (ALRIGHT) - FOURTH.mp3" type="audio/mpeg">
+                    Your browser does not support audio element
+                </audio>
             </td>
         </tr>
     </tbody>
@@ -173,7 +218,7 @@
     </div>
 
     <!-- Table 2: Favorite Films -->
-    <h2>Favorite Films</h2>
+    <h2>Favourite Films</h2>
     <table>
         <caption> Table 2: favourite Films<caption>
         <tr>
@@ -195,7 +240,7 @@
     </table>
 
     <!-- Table 3: Favorite YouTubers -->
-    <h2>Favorite YouTubers</h2>
+    <h2>Favourite YouTubers</h2>
     <table>
         <caption> Table 3: favourite youtubers</caption>
         <tr>
@@ -220,7 +265,7 @@
     </table>
 
     <!-- Table 4: Favorite Series -->
-    <h2>Favorite Series</h2>
+    <h2>Favourite Series</h2>
     <table>
         <caption> Table 4: favourite series</caption>
         <tr>
@@ -241,7 +286,7 @@
         </tr>
     </table>
 
-    <h2>Synopsis of Favorite Series</h2>
+    <h2>Synopsis of Favourite Series</h2>
     <ul>
         <li><b><i>Jeong-Nyeon</i></b>
             <ol>
@@ -265,3 +310,4 @@
 
 </body>
 </html>
+
