--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,7 @@
   <title>MY WEBSITE</title>
   
   <style>
-    /* General body reset */
+    
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -18,11 +18,11 @@
     /* Header GIF - Welcome Animation */
     .welcome-section {
       text-align: center;
-      margin: 20px 0; /* Jarak dari atas */
+      margin: 20px 0; 
     }
 
     .welcome-section img {
-      width: 30%; /* Saiz yang kecil tetapi seragam */
+      width: 30%; 
       max-height: 150px;
       animation: bounce 2s ease infinite;
     }
@@ -40,7 +40,7 @@
       }
     }
 
-    /* Main Content Container - Diatur lebih ke bawah */
+    
     .container {
       width: 400px;
       padding: 10px;
@@ -50,7 +50,7 @@
       text-align: center;
       color: white;
       position: absolute;
-      top: 75%; /* Disesuaikan lebih ke bawah */
+      top: 75%; 
       left: 50%;
       transform: translate(-50%, -50%);
     }
@@ -77,12 +77,12 @@
 </head>
 <body>
   
-  <!-- GIF Welcome atas kotak utama (kecil dan seragam) -->
+  
   <div class="welcome-section">
     <img src="gif/welcome gif.gif" alt="Welcome to my website">
   </div>
 
-  <!-- Main Content Section yang diletakkan lebih ke bawah -->
+
   <div class="container">
     <h1>🌷HELLO WORLD! WELCOME TO ATHIRAH'S WEBSITE🌷</h1>
     <a href="biodata.html" class="button" >Biodata</a>
