--- a/biodata.html
+++ b/biodata.html
@@ -2,19 +2,53 @@
     <head>
         <title>biodata</title>
     </head>
-    <body bgcolor="#cbc80b">
+    <body>
 
         <h1>BIODATA</h1>
         <style>
-            body
-    {
+        body
+        {
         background-image: url(image/back\ paper.jpg);
-        background-size: 20' inc;
+        background-size: 100%;
         background-repeat: no-repeat;
-     }
-        </style>
+         }
 
-        Welcome To Athirah's Website
+         .buttons {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin: 20px 0;
+        }
+
+        .buttons a {
+            text-decoration: none;
+            padding: 12px 25px;
+            font-size: 1.1em;
+            color: white;
+            background-color: black;
+            border: none;
+            border-radius: 25px;
+            transition: background-color 0.3s, transform 0.3s;
+        }
+
+        .buttons a:hover {
+            background-color: #ff5733;
+            transform: scale(1.1);
+        }
+    </style>
+
+    <h1>🌷HELLO WORLD! WELCOME TO ATHIRAH'S WEBSITE🌷</h1>
+        <div class="buttons">
+            <a href="homepage.html" class="button">Homepage</a>
+            <a href="my_family.html" class="button">My Family</a>
+            <a href="my_education.html" class="button">My Education</a>
+            <a href="my_fav_site.html" class="button">Favourite Site</a>
+            <a href="my_topfav.html" class="button">Favourite Entertainment</a>
+            <a href="gallery.html" class="button">Gallery</a>
+            <a href="my_contact.html" class="button">My Contact</a>
+        </div>
+
            <br><b>𓆩♡𓆪ATHIRAH DANIA BINTI ANUAR𓆩♡𓆪</b>
         <p align="justify">
         <big>About Myself</big><small>(AD)</small>
