--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
 
 <h1 align="center">🔥My Gallery🔥</h1>
         <div class="buttons">
-            <a href="homepage.html" class="button">Homepage</a>
+            <a href="index.html" class="button">Homepage</a>
             <a href="my_family.html" class="button">My Family</a>
             <a href="my_education.html" class="button">My Education</a>
             <a href="my_fav_site.html" class="button">Favourite Site</a>
