--- a/my_contact.html
+++ b/my_contact.html
@@ -62,7 +62,7 @@
 
   <h2 align="center" >˚‧｡⋆🌻⋆｡‧˚MY CONTACT DETAILS˚‧｡⋆🌻⋆｡‧˚</h2> 
         <div class="buttons">
-            <a href="homepage.html" class="button">Homepage</a>
+            <a href="index.html" class="button">Homepage</a>
             <a href="my_family.html" class="button">My Family</a>
             <a href="my_education.html" class="button">My Education</a>
             <a href="my_fav_site.html" class="button">Favourite Site</a>
