--- a/my_family.html
+++ b/my_family.html
@@ -36,7 +36,7 @@
 
     <h1 align="center">ATHIRAH'S FAMILY</h1>
         <div class="buttons">
-            <a href="homepage.html" class="button">Homepage</a>
+            <a href="index.html" class="button">Homepage</a>
             <a href="my_family.html" class="button">My Family</a>
             <a href="my_education.html" class="button">My Education</a>
             <a href="my_fav_site.html" class="button">Favourite Site</a>
@@ -126,7 +126,7 @@
          hspace="10" vspace="10" style="float:left;" alt="my_brothers" >
          <h3 style="text-align:justify;">
          <br>
-         I have two older brothers, and we’ve been very close since childhood.
+         I have two older brothers, and we been very close since childhood.
         Our bond grew strong because I had no younger siblings for a long time,
         and the age gap made me rely on them a lot. They have always been there for me,
         whether to give advice or simply to be someone I can talk to. 
