--- a/my_topfav.html
+++ b/my_topfav.html
@@ -10,7 +10,7 @@
         padding: 0; 
         line-height: 1.6;
         background-image: url("image/back paper.jpg");
-        background-size: cover; /* Ensures the image covers the entire background */
+        background-size: cover; 
         background-repeat: no-repeat;
         background-attachment: fixed; /
         background-position: center; 
@@ -95,7 +95,7 @@
 <body>
     <h1>🌷HELLO WORLD! WELCOME TO ATHIRAH'S WEBSITE🌷</h1>
     <div class="buttons">
-        <a href="homepage.html" class="button">Homepage</a>
+        <a href="index.html" class="button">Homepage</a>
         <a href="my_family.html" class="button">My Family</a>
         <a href="my_education.html" class="button">My Education</a>
         <a href="my_fav_site.html" class="button">Favourite Site</a>
@@ -106,7 +106,7 @@
 
     <h1> <font color="black"></font>🎥My Favourite Entertainment🎵</h1>
 
-    <!-- Table 1: Favorite Music -->
+
 <!-- Table 1: Favorite Music -->
 <h2>Favourite Music</h2>
 <table border="1">
