--- a/my_topfav.html
+++ b/my_topfav.html
@@ -15,9 +15,14 @@
         background-attachment: fixed; /
         background-position: center; 
         }
-        h1, h2 {
+        h1, {
             text-align: center;
-            color: #836fdb;
+            color: #000000;
+        }
+        h2
+        {
+            text-align: center;
+            color: #233681;
         }
         table {
             border-collapse: collapse;
@@ -93,7 +98,7 @@
 
 </head>
 <body>
-    <h1>🌷HELLO WORLD! WELCOME TO ATHIRAH'S WEBSITE🌷</h1>
+    <h1 align="center"> Favourite Entertainment🎵</h1>
     <div class="buttons">
         <a href="index.html" class="button">Homepage</a>
         <a href="my_family.html" class="button">My Family</a>
@@ -104,7 +109,7 @@
         <a href="my_contact.html" class="button">My Contact</a>
     </div>
 
-    <h1> <font color="black"></font>🎥My Favourite Entertainment🎵</h1>
+    
 
 
 <!-- Table 1: Favorite Music -->
