--- a/my_fav_site.html
+++ b/my_fav_site.html
@@ -3,15 +3,7 @@
  
     <title>Shopping Site</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-image: url('image/back\ paper.jpg');
-            background-size:  200%;;
-            background-repeat: no-repeat;
-            margin: 0;
-            padding: 0;
-        }
-
+       
         h1 {
             text-align: center;
             color: #0d0c1c;
@@ -27,30 +19,6 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-        }
-
-        .buttons {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            margin: 20px 0;
-        }
-
-        .buttons a {
-            text-decoration: none;
-            padding: 12px 25px;
-            font-size: 1.1em;
-            color: white;
-            background-color: black;
-            border: none;
-            border-radius: 25px;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-        .buttons a:hover {
-            background-color: #ff5733;
-            transform: scale(1.1);
         }
 
         hr {
@@ -116,6 +84,8 @@
     </style>
 </head>
 <body>
+    <link rel="stylesheet" href="style.css">
+    
     <h1>🍃MY FAVOURITE SITE🍃</h1>
     <div class="container">
         <div class="buttons">
@@ -159,5 +129,9 @@
             </video>
         </div>
     </div>
+    <footer>
+        &copy; 2024 Athirah(AD). All Rights Reserved.
+        <div class="last-update">Last Updated: December 16, 2024</div>
+    </footer>
 </body>
 </html>
