--- a/index.html
+++ b/index.html
@@ -40,24 +40,24 @@
 
     
     .container {
-      width: 400px;
-      padding: 10px;
+      width: 800px; 
+      padding: 20px;
       background-color: #107d36;
       border-radius: 10px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
       text-align: center;
       color: white;
       position: absolute;
-      top: 75%; 
+      top: 60%; 
       left: 50%;
       transform: translate(-50%, -50%);
     }
 
     /* Styling for buttons */
     .button {
-      display: block;
-      margin: 10px 0;
-      padding: 10px;
+      display: inline-block; 
+      margin: 10px;
+      padding: 10px 20px; 
       font-size: 16px;
       color: white;
       background-color: #000000;
